# MyQtCreatorUI

./: README.md
QtCreator_UI/: CMakeLists.txt  Main.qml  Resources.qrc  main.cpp  qtquickcontrols2.conf
QtCreator_UI/debug_window/: DebugWindow.qml
QtCreator_UI/design_window/: DesignWindow.qml
QtCreator_UI/extensions_window/: ExtensionsWindow.qml
QtCreator_UI/help_window/: HelpWindow.qml
QtCreator_UI/projects_window/: ProjectsWindow.qml
QtCreator_UI/side_bar/: MenuObjectModel.qml  SideBar.qml  SideBarMenu.qml
QtCreator_UI/welcome_windows/: CustomButton.qml  Explore.qml  Welcome.qml
QtCreator_UI/windows/: Edit.qml  Explore.qml  StartComponent.qml  Welcome.qml
